--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -61,3 +61,10 @@ body {
 	font-size:15px;
 	font-family: 'robotothin', Verdana, Geneva, sans-serif;
 }
+
+.change-display {
+	color:#900;	
+}
+
+.base-update{}
+.base-update-val{}
